Revision history for Module-Metadata

{{$NEXT}}
  - use a more strict matching heuristic when attempting to infer the
    "primary" module name in a parsed .pm file

1.000031  2015-11-24 03:57:55Z (TRIAL RELEASE)
  - be less noisy on failure when building as part of perl core (see perl
    RT#126685)

1.000030  2015-11-20 03:03:24Z (TRIAL RELEASE)
  - temp dirs cleaned up during tests (Steve Hay)
  - more accurately mark tests as TODO, so as to have a quieter and less
    confusing test run without passing TODO tests. This release is primarily
    intended for the perl 5.23.5 release.

1.000029  2015-09-11 16:25:43Z (TRIAL RELEASE)
  - fix missing "use" statement in refactored test helper (only affected older
    perls, due to other module interactions)

1.000028  2015-09-11 04:24:39Z (TRIAL RELEASE)
  - refactored and expanded test cases
  - fixed a $VERSION extraction issue on perl 5.6.2 (RT#105978, PR#17)
  - fix the detection of package Foo when $Foo::VERSION is set (RT#85961)

1.000027  2015-04-11 00:21:26Z
  - work around issues with an unconfigured Log::Contextual (Kent Fredric)
  - allow tests to pass in a perl with no taint support (James Raspass)

1.000026  2015-01-17 19:22:34Z
  - patched tests to be less noisy in blead builds (Dave Mitchell, RT#101491)

1.000025  2015-01-04 18:56:00Z
  - evaluate version assignment in a clean environment, to fix assignment in a
    block (RT#101095)

1.000024  2014-06-03 01:52:46Z
  - fix inaccurate prerequisite declaration on Test::More (in 1.000023)

1.000023  2014-06-02 02:37:17Z
  - support installations on older perls with an ExtUtils::MakeMaker earlier
    than 6.63_03

1.000022 - 2014-04-29
  - work around change in comparison behaviour in Test::More 0.95_01 by being
    more explicit with our tests - now explicitly checking the string form of
    the extracted version, rather than the entire version object
  - ensure the extracted version is returned as a version object in all cases
    (RT#87782, Randy Stauner)